mejoras visuales en la app

--- a/src/Pages/css/Home.css
+++ b/src/Pages/css/Home.css
@@ -39,7 +39,7 @@
 
 @media (max-width: 800px) {
     .Home {
-        margin-top: 5rem;
+        margin-bottom: 10px;
         flex-direction: column-reverse;
     }
     .img-fondo {
