--- a/src/Pages/css/AboutUs.css
+++ b/src/Pages/css/AboutUs.css
@@ -1,29 +1,36 @@
 .team-member {
     margin-bottom: 3rem;
     text-align: center;
-  }
-  .team-member img {
+}
+
+.team-member img {
     width: 14rem;
     height: 14rem;
     border: 0.5rem solid rgba(0, 0, 0, 0.1);
-  }
-  .team-member h4, .team-member .h4 {
+}
+
+.team-member h4,
+.team-member .h4 {
     margin-top: 1.5rem;
     margin-bottom: 0;
-  }
+}
 
-  .redondeo{
+.redondeo {
     border-radius: 100% !important;
 }
 
-.about{
-    margin-top: 5rem;
+.about {
+    margin-top: 2em !important;
     font-family: 'Merriweather Sans', sans-serif;
     color: white;
 }
 
-.page-section{
+.page-section {
     margin-top: 6rem;
     font-family: 'REM', sans-serif;
     color: white;
+}
+
+.scroll-to {
+    margin-top: 5em !important;
 }
