corrijo url del back

--- a/src/Pages/css/error404.css
+++ b/src/Pages/css/error404.css
@@ -24,3 +24,7 @@
         width: calc(300px + (500px - 300px) * ((100vw - 986px) / (1920 - 986)));
     }
 }
+
+.scroll-to {
+    margin-top: 5em;
+}
