--- a/src/Components/Task/css/UserTask.css
+++ b/src/Components/Task/css/UserTask.css
@@ -121,6 +121,7 @@
     justify-content: center !important;
     font-size: 5em;
     white-space: nowrap;
+    margin-top: 1em;
 }
 
 .no-tasks-message1 {
@@ -164,7 +165,7 @@
     .no-tasks-message {
         font-size: 45px;
         padding-top: 1em;
-        margin-top: -1.5em;
+        margin-top: 1em !important;
         /* Tamaño de fuente más pequeño para pantallas pequeñas */
         /* Otros estilos para los elementos de texto en pantallas pequeñas */
     }
@@ -175,7 +176,7 @@
     .no-tasks-message {
         font-size: 40px;
         padding-top: 3em;
-        margin-top: -3em;
+        margin-top: 1em !important;
         /* Tamaño de fuente más pequeño para pantallas pequeñas */
         /* Otros estilos para los elementos de texto en pantallas pequeñas */
     }
@@ -186,9 +187,15 @@
     .no-tasks-message {
         font-size: 25px;
         padding-top: 8.5em;
-        margin-top: -9em;
+        margin-top: -5em !important;
         /* Tamaño de fuente más pequeño para pantallas pequeñas */
         /* Otros estilos para los elementos de texto en pantallas pequeñas */
+    }
+}
+
+@media (max-width: 4850px) {
+    .search-bar-container {
+        margin-top: 8em;
     }
 }
 
