corrijo responsive del home

--- a/src/Pages/css/AboutUs.css
+++ b/src/Pages/css/AboutUs.css
@@ -34,3 +34,15 @@
 .scroll-to {
     margin-top: 5em !important;
 }
+
+@media (max-width: 886px) {
+    .section-heading {
+        margin-top: 6em;
+    }
+}
+
+@media (max-width: 485px) {
+    .section-heading {
+        margin-top: 8em !important;
+    }
+}
