--- a/src/Components/Task/css/UserTask.css
+++ b/src/Components/Task/css/UserTask.css
@@ -161,33 +161,47 @@
 }
 
 @media (max-width: 1000px) {
-    .no-tasks-message1,
+    .no-tasks-message1 {
+        font-size: 45px;
+        padding-top: 1em;
+        margin-top: 3em !important;
+    }
     .no-tasks-message {
         font-size: 45px;
         padding-top: 1em;
-        margin-top: 1em !important;
+        margin-top: 0.1em !important;
         /* Tamaño de fuente más pequeño para pantallas pequeñas */
         /* Otros estilos para los elementos de texto en pantallas pequeñas */
     }
 }
 
-@media (max-width: 581px) {
-    .no-tasks-message1,
+@media (max-width: 668px) {
+    .no-tasks-message1 {
+        font-size: 40px;
+        padding-top: 4em;
+        margin-top: 2em !important;
+    }
     .no-tasks-message {
         font-size: 40px;
         padding-top: 3em;
-        margin-top: 1em !important;
+        margin-top: -2em !important;
         /* Tamaño de fuente más pequeño para pantallas pequeñas */
         /* Otros estilos para los elementos de texto en pantallas pequeñas */
     }
 }
 
 @media (max-width: 450px) {
-    .no-tasks-message1,
+    .no-tasks-message1 {
+        font-size: 28px;
+        padding-top: 9em;
+        margin-top: 1em !important;
+        /* Tamaño de fuente más pequeño para pantallas pequeñas */
+        /* Otros estilos para los elementos de texto en pantallas pequeñas */
+    }
     .no-tasks-message {
         font-size: 25px;
         padding-top: 8.5em;
-        margin-top: -5em !important;
+        margin-top: -7em !important;
         /* Tamaño de fuente más pequeño para pantallas pequeñas */
         /* Otros estilos para los elementos de texto en pantallas pequeñas */
     }
