--- a/src/Components/Task/css/UserTask.css
+++ b/src/Components/Task/css/UserTask.css
@@ -94,10 +94,10 @@
 
 @media (max-width: 626px) {
     .Search-Bar {
-        margin-top: -6em !important;
+        margin-top: 1em !important;
     }
     .clear-button {
-        margin-top: -6em;
+        margin-top: 1em;
     }
     .text-List {
         margin-top: -2em;
@@ -110,13 +110,14 @@
 
 @media (max-width: 432px) {
     .Search-Bar {
-        margin-top: -0.8em !important;
+        margin-top: 1em !important;
     }
     .clear-button {
-        margin-top: -0.8em;
+        margin-top: 1em;
+        margin-left: 0.5em;
     }
     .text-List {
-        margin-top: 3em !important;
+        margin-top: 2.3em !important;
         margin-bottom: -2em;
     }
 }
@@ -162,7 +163,7 @@
     }
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 1008px) {
     .no-tasks-message1 {
         font-size: 45px;
         margin-top: 4em !important;
@@ -171,7 +172,7 @@
     .no-tasks-message {
         font-size: 45px;
         padding-top: 1em;
-        margin-top: 0.1em !important;
+        margin-top: -1em !important;
     }
 }
 
