--- a/src/Components/Task/css/UserTask.css
+++ b/src/Components/Task/css/UserTask.css
@@ -73,6 +73,7 @@
     width: 4em !important;
     color: aliceblue;
     height: 2.4em;
+    margin-left: 0.5em !important;
     font-size: 16px;
     padding: 5px 10px;
     border: none;
@@ -129,7 +130,7 @@
     justify-content: center !important;
     font-size: 5em;
     white-space: nowrap;
-    margin-top: -0.5em;
+    margin-top: -0.2em;
     margin-bottom: 0.2em !important;
 }
 
@@ -223,4 +224,20 @@
         font-size: calc(10px - 2px * ((1000px - 445px) / (1920 - 445)));
         transition: font-size 0.3s ease;
     }
+}
+
+.done-f,
+.pending-f,
+.clar-f {
+    width: 4em !important;
+    margin: 1em;
+    margin-top: -0.5em;
+    color: rgb(233, 240, 235) !important;
+    height: 2.4em;
+    font-size: 15px !important;
+    border: none;
+    background-color: transparent;
+    font-family: 'Merriweather Sans', sans-serif !important;
+    font-family: 'REM', sans-serif !important;
+    font-family: 'Roboto Slab', serif !important;
 }
